--- a/react-codeeditor/package.json
+++ b/react-codeeditor/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "@uiw/react-monacoeditor": "^3.6.0",
     "@uiw/react-textarea-code-editor": "^3.0.2",
     "react": "^18.2.0",
